# cotton-desk-tasks

./: .gitignore  ADR.md  Makefile  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
desk/: apps.py  domain.py  extracao.py  models.py  tasks.py  urls.py  views.py
desk/management/commands/: registrar_preco.py
desk/migrations/: 0001_initial.py  0002_laudohvi.py  0003_contrato.py  0004_indicepreco.py
desk/templates/desk/: dashboard.html
desk/tests/: conftest.py  test_acoes_demo.py  test_checkout.py  test_comando_registrar_preco.py  test_extracao.py  test_extrair_confirmacao.py  test_hvi.py  test_laudo_hvi.py  test_limpar_tasks.py  test_precos.py  test_relatorio.py  test_tasks.py  test_tasks_json.py  test_upload_lote.py  test_views.py  test_worker_real.py
