[project]
name = "cotton-desk-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
